--- a/services/t_push/Makefile
+++ b/services/t_push/Makefile
@@ -1,22 +1,17 @@
 run-live-dev:
-	# cp live.dev.env .env
+	cp live.dev.env .env
 	poetry run python src/main.py
 
 run-historical-dev:
 	cp historical.dev.env .env
 	poetry run python src/main.py
-
+	
 build:
-	docker build -t trade_producer .
+	docker build -t topic_to_feature_store .
 
 run-live: build
 	docker run \
 		--network=redpanda_network \
 		--env-file live.prod.env \
-		trade_producer
-
-run-historical: build
-	docker run \
-		--network=redpanda_network \
-		--env-file historical.prod.env \
-		trade_producer
+		--env-file credentials.env \
+		topic_to_feature_store
